- Fixed bug #37931 (possible crash in OCI8 after database restart 
  when using persistent connections). (Tony)
- Fixed bug #37920 (compilation problems on z/OS). (Tony)
- Fixed bug #37864 (file_get_contents() leaks on empty file). (Hannes)
- Fixed bug #37862 (Integer pointer comparison to numeric value).
  (bugs-php at thewrittenword dot com)
- Fixed bug #37811 (define not using toString on objects). (Marcus)
- Fixed bug #37807 (segmentation fault during SOAP schema import). (Tony)
- Fixed bug #37806 (weird behavior of object type and comparison). (Marcus)
- Fixed bug #37780 (memory leak trying to execute a non existing file (CLI)).
  (Mike)
- Fixed bug #37747 (strtotime segfaults when given "nextyear"). (Derick)
- Fixed bug #37720 (merge_php_config scrambles values). (Mike,
  pumuckel at metropolis dot de)
- Fixed bug #37709 (Possible crash in PDO::errorCode()). (Ilia)
- Fixed bug #37707 (clone without assigning leaks memory). (Ilia, Nuno, Dmitri)
- Fixed bug #37705 (Semaphore constants not available). (Ilia)
- Fixed bug #37671 (MySQLi extension fails to recognize BIT column). (Ilia)
- Fixed bug #37635 (parameter of pcntl signal handler is trashed). (Mike)
- Fixed bug #37632 (Protected method access problem). (Marcus)
- Fixed bug #37630 (MySQL extensions should link against thread safe client
  libs if built with ZTS). (Mike)
- Fixed bug #37620 (mysqli_ssl_set validation is inappropriate). (Georg)
- Fixed bug #37616 (DATE_RFC822 does not product RFC 822 dates).
  (Hannes Magnusson, Derick)
- Fixed bug #37614 (Class name lowercased in error message). (Johannes)
- Fixed bug #37587 (var without attribute causes segfault). (Marcus)
- Fixed bug #37586 (Bumped minimum PCRE version to 6.6, needed for recursion
  limit support). (Ilia)
- Fixed bug #37569 (WDDX incorrectly encodes high-ascii characters). (Ilia)
- Fixed bug #37565 (Using reflection::export with simplexml causing a crash).
  (Marcus)